11-LoadBalancer.tf
resource "aws_lb" "app1_alb" {
  name               = "app1-load-balancer"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.app1_sg02_LB01.id]
  subnets            = [
    aws_subnet.public-me-central-1a.id,
    aws_subnet.public-me-central-1b.id,
    aws_subnet.public-me-central-1c.id
  ]
  enable_deletion_protection = false
##Lots of death and suffering here, make sure it's false

  tags = {
    Name    = "App1LoadBalancer"
    Service = "App1"
    Owner   = "User"
    Project = "Web Service"
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.app1_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app1_tg.arn
  }
}
