7-SG02_LoadBalancer.tf
resource "aws_security_group" "app1_sg02_LB01" {
    
    name        = "app1_sg02_LB01"
    description = "app1_sg02_LB01"
    vpc_id      = aws_vpc.app1.id

    ingress {
        description      = "LB_External"
        from_port        = 80
        to_port          = 80
        protocol         = "tcp"
        cidr_blocks      = ["0.0.0.0/0"]
        //ipv6_cidr_blocks = [aws_vpc.app1.ipv6_cidr_block]
    }

    egress {
        from_port        = 0
        to_port          = 0
        protocol         = "-1"
        cidr_blocks      = ["0.0.0.0/0"]
        ipv6_cidr_blocks = ["::/0"]
    }

    tags = {
    Name = "app1_sg02_LB01"
    Service = "application1"
    Owner = "Chewbacca"
    Planet = "Musafar"
  }
}
